<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/loginHeaderTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toStartOf="@+id/loginRightGuide"
            app:layout_constraintStart_toStartOf="@+id/loginLeftGuide"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/loginEmailET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toStartOf="@+id/loginRightGuide"
            app:layout_constraintStart_toStartOf="@+id/loginLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/loginHeaderTV" />

        <EditText
            android:id="@+id/loginPasswordET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toStartOf="@+id/loginRightGuide"
            app:layout_constraintStart_toStartOf="@+id/loginLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailET" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_button"
            app:layout_constraintEnd_toStartOf="@+id/loginRightGuide"
            app:layout_constraintStart_toStartOf="@+id/loginLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordET" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toStartOf="@+id/loginRightGuide"
            app:layout_constraintStart_toStartOf="@+id/loginLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

        <TextView
            android:id="@+id/loginRegisterTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_register"
            app:layout_constraintEnd_toStartOf="@+id/loginRightGuide"
            app:layout_constraintStart_toStartOf="@+id/loginLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/loginRightGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/loginLeftGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>