<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/registerHeaderTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/register_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toStartOf="@+id/registerRightGuide"
            app:layout_constraintStart_toStartOf="@+id/registerLeftGuide"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/registerEmailIV"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_email"
            app:layout_constraintStart_toStartOf="@+id/registerLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/registerHeaderTV" />

        <EditText
            android:id="@+id/registerEmailET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toStartOf="@+id/registerRightGuide"
            app:layout_constraintStart_toEndOf="@+id/registerEmailIV"
            app:layout_constraintTop_toBottomOf="@+id/registerHeaderTV" />

        <ImageView
            android:id="@+id/registerPasswordIV"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_lock_open"
            app:layout_constraintStart_toStartOf="@+id/registerLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/registerEmailIV" />

        <EditText
            android:id="@+id/registerPasswordET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toStartOf="@+id/registerRightGuide"
            app:layout_constraintStart_toEndOf="@+id/registerPasswordIV"
            app:layout_constraintTop_toBottomOf="@+id/registerEmailET" />

        <ImageView
            android:id="@+id/registerConfirmPasswordIV"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_lock"
            app:layout_constraintStart_toStartOf="@+id/registerLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordIV" />

        <EditText
            android:id="@+id/registerConfirmPasswordET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/register_confirm_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toStartOf="@+id/registerRightGuide"
            app:layout_constraintStart_toEndOf="@+id/registerConfirmPasswordIV"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordET" />

        <ImageView
            android:id="@+id/registerFirstNameIV"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_user"
            app:layout_constraintStart_toStartOf="@+id/registerLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/registerConfirmPasswordIV" />

        <EditText
            android:id="@+id/registerFirstNameET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/register_first_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/registerRightGuide"
            app:layout_constraintStart_toEndOf="@+id/registerFirstNameIV"
            app:layout_constraintTop_toBottomOf="@+id/registerConfirmPasswordET" />

        <ImageView
            android:id="@+id/registerLastNameIV"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_person"
            app:layout_constraintStart_toStartOf="@+id/registerLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/registerFirstNameIV" />

        <EditText
            android:id="@+id/registerLastNameET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/register_last_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/registerRightGuide"
            app:layout_constraintStart_toEndOf="@+id/registerLastNameIV"
            app:layout_constraintTop_toBottomOf="@+id/registerFirstNameET" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_button"
            app:layout_constraintEnd_toStartOf="@+id/registerRightGuide"
            app:layout_constraintStart_toStartOf="@+id/registerLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/registerLastNameET" />

        <View
            android:id="@+id/registerDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toStartOf="@+id/registerRightGuide"
            app:layout_constraintStart_toStartOf="@+id/registerLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

        <TextView
            android:id="@+id/registerHaveAccountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/register_login"
            app:layout_constraintEnd_toStartOf="@+id/registerRightGuide"
            app:layout_constraintStart_toStartOf="@+id/registerLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/registerDivider" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/registerRightGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/registerLeftGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>